# kbo

./: CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
cmake/platform/: linux.cmake  macos.cmake  windows.cmake
include/kbo/: allocator.h  logger.h
src/: allocator.c  kbo.c  logger.c  main.c
